charts/all/rec-sys-ui/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rec-sys-ui
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rec-sys-ui
  template:
    metadata:
      labels:
        app: rec-sys-ui
    spec:
      containers:
      - name: rec-sys-ui
        image: quay.io/ecosystem-appeng/rec-sys-ui:0.0.3
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
        volumeMounts:
        - name: tls-secret
          mountPath: /app/tls.crt
          subPath: tls.crt
          readOnly: true
      volumes:
      - name: tls-secret
        secret:
          secretName: feast-feast-edb-rec-sys-registry-tls
          items:
          - key: tls.crt
            path: tls.crt
