charts/all/rec-sys-ui/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rec-sys-ui-service
spec:
  selector:
    app: rec-sys-ui
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
